# gpodder

./: .appveyor.yml  .editorconfig  .gitignore  .travis.yml  AUTHORS  CONTRIBUTING.md  ChangeLog  Doxyfile  INSTALL  LICENSE.ISC  MANIFEST.in  Makefile  README  README.md  TODO  makefile  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.appveyor/: get_notifu.sh  msys2.sh
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: linttest.yml  release-from-macos.yml  winget-releaser.yml
.tx/: config
data/: credits.txt  gpodder.desktop  gpodder.desktop.in  gpodder.glade  messages.pot
data/artwork/: README
data/maemo/: gpodder-mplayer  gpodder.desktop  notification-groups.conf
data/man/: gpo.1  gpodder-backup.1  gpodder.1
data/osx/: Info.plist  Makefile  README  icon.icns
data/po/: Makefile  README  cs.po  cs_CZ.po  da.po  de.po  el.po  es.po  es_ES.po  eu.po  fi.po  fr.po  gl.po  he.po  it.po  kk.po  merge-from-transifex.sh  nb.po  nl.po  nn.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  summary.py  sv.po  tr.po  tr_TR.po  uk.po  validate.sh  zh_CN.po
data/ui/: gpodder.ui  gpodderaddpodcast.ui  gpodderaddpodcastdialog.ui  gpodderchannel.ui  gpodderconfigeditor.ui  gpodderdependencymanager.ui  gpodderdeviceplaylist.ui  gpodderdiablopreferences.ui  gpodderepisode.ui  gpodderepisodeselector.ui  gpoddermaemopreferences.ui  gpodderopmllister.ui  gpodderplaylist.ui  gpodderpreferences.ui  gpodderproperties.ui  gpoddershownotes.ui  gpodderstackabledownloads.ui  gpodderstackableepisode.ui  gpoddersync.ui  gpodderwelcome.ui  mygpoddersettings.ui
debian/: README.Debian  changelog  control  copyright  postinst  prerm  rules
doc/: config-doc-generator.py
doc/dev/: android.txt  authorship.sh  build-deps-breezy.txt  copyright_notice  daap2rss.py  db-convert.py  debian.html  debian.txt  deviceconfig.py  dot-desktop-file-spec.txt  generate-ubuntu-source  gtk-builder-clean.py  gtk-builder-clean.xslt  i18n.txt  install-desktopentry.sh  ipod-sync.txt  pill-tester.py  porting.txt  redhat-wget-output.txt  splash-logo.py  svncl.sed  tepache  tepache-howto.txt  update-git-gui.py
doc/man/: gpo.1  gpodder-backup.1  gpodder.1  gpodder.man.1
doc/spec/: shownotes.txt
doc/tests/: README
draft/directory-ui/: directory.py  tagcloud.py
examples/: gpodder_mark_played.py  hooks.py
po/: LINGUAS  ca.po  cs.po  cs_CZ.po  da.po  de.po  el.po  es.po  es_ES.po  es_MX.po  eu.po  fa_IR.po  fi.po  fr.po  gl.po  he.po  hu.po  id_ID.po  it.po  kk.po  ko_KR.po  makefile  merge-from-transifex.sh  messages.pot  nb.po  nl.mo  nl.po  nn.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  summary.py  sv.po  tr.po  tr_TR.po  uk.po  validate.sh  (+2 more)
share/applications/: gpodder-url-handler.desktop.in  gpodder.desktop.in
share/gpodder/: credits.txt
src/: jsonconfig.py  podcastparser.py
src/gpodder/: SimpleGladeApp.py  (+89 more)
tests/: model.py  test_feedcore.py  test_my.py  test_podcastparser.py
tools/: convert_sqlite_to_jsondb.py  create-desktop-icon.py  generate-ubuntu-source.sh  getversion.py  github_release.py  localdepends.py  make-help.txt  progressbar_icon_tester.py  requirements.txt  test-auth-server.py  upgrade-win32-binary-package.py
(+512 files in other folders)
