[build-system]
requires = [
    "setuptools>=64",
    "build",
]
build-backend = "setuptools.build_meta"

[project]
name = "gpodder"
description = "Media aggregator and podcast client"
authors = [
    {name = "Thomas Perl", email = "thp@gpodder.org"},
]
readme = "README.md"
license = {file = "COPYING"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
requires-python = ">=3.7"
dependencies = [
    "podcastparser>=0.6.0",
    "mygpoclient>=1.7",
    "dbus-python;platform_system=='Linux'",
    "PyGObject",
]
dynamic = ["version"]

[project.optional-dependencies]
gui = ["PySocks"]

[project.urls]
Homepage = "http://gpodder.org"
Documentation = "https://gpodder.github.io/docs/"
Repository = "https://github.com/gpodder/gpodder"
Issues = "https://github.com/gpodder/gpodder/issues"
"Mailing List" = "http://freelists.org/list/gpodder"
"IRC Channel" = "irc://irc.libera.chat/#gpodder"

[tool.setuptools.dynamic]
version = {attr = "gpodder.__version__"}
