[build-system]
requires = [
    "setuptools>=64",
]
build-backend = "setuptools.build_meta"

[project]
name = "gpodder"
description = "Media aggregator and podcast client"
authors = [
    {name = "Thomas Perl", email = "thp@gpodder.org"},
]
readme = "README.md"
license = {file = "COPYING"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
requires-python = ">=3.8"
dependencies = [
    "dbus-python;platform_system=='Linux'",
    "mygpoclient==1.10",
    "podcastparser==0.6.10",
    "PyGObject",
    "requests[socks]==2.32.3",
    "urllib3==2.2.2",
]
dynamic = ["version"]

[project.optional-dependencies]
eyed3 = ["eyed3"]
gui = ["PySocks"]
html5lib = ["html5lib==1.1"]
mutagen = ["mutagen==1.47.0"]
coverart = ["filelock", "pillow"]
yt-dlp = ["yt-dlp"]

[project.urls]
Homepage = "http://gpodder.org"
Documentation = "https://gpodder.github.io/docs/"
Repository = "https://github.com/gpodder/gpodder"
Issues = "https://github.com/gpodder/gpodder/issues"
"Mailing List" = "http://freelists.org/list/gpodder"
"IRC Channel" = "irc://irc.libera.chat/#gpodder"

[tool.setuptools.dynamic]
version = {attr = "gpodder.__version__"}
